--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
+    "sass": "^1.83.1",
     "tailwindcss": "^3.4.1"
   }
 }
